# Course_Work_OOP_1

./: ArrayOfObjectsOnScreen.cpp  ArrayOfObjectsOnScreen.h  CMakeLists.txt  Circle.cpp  Circle.h  Ellipse.cpp  Ellipse.h  Exception.h  Figure.cpp  Figure.h  FigureName.cpp  FigureName.h  Object.cpp  Object.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  Triangle.cpp  Triangle.h  addfigurewindow.cpp  addfigurewindow.h  addfigurewindow.ui  app_resources.qrc  dialog_addnewcircle.cpp  dialog_addnewcircle.h  dialog_addnewcircle.ui  dialog_addnewellipse.cpp  dialog_addnewellipse.h  dialog_addnewellipse.ui  dialog_addnewfigure.cpp  dialog_addnewfigure.h  dialog_addnewfigure.ui  dialog_addnewrectangle.cpp  dialog_addnewrectangle.h  dialog_addnewrectangle.ui  dialog_addnewtriangle.cpp  dialog_addnewtriangle.h  dialog_addnewtriangle.ui  dialog_drawablewindow.cpp  (+21 more)
Course_Work_OOP_1/: CMakeLists.txt
Dialogs_AddFigures/: dialog_addnewcircle.cpp  dialog_addnewcircle.h  dialog_addnewcircle.ui  dialog_addnewellipse.cpp  dialog_addnewellipse.h  dialog_addnewellipse.ui  dialog_addnewfigure.cpp  dialog_addnewfigure.h  dialog_addnewfigure.ui  dialog_addnewrectangle.cpp  dialog_addnewrectangle.h  dialog_addnewrectangle.ui  dialog_addnewtriangle.cpp  dialog_addnewtriangle.h  dialog_addnewtriangle.ui
FileHandler/: FileHandler.h  TypesHandler.cpp  TypesHandler.h
SingleLinkedList/: SL_List.h  SL_List_Node.h
